--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,15 +84,15 @@
 
     <Button
         android:id="@+id/submitButton"
-        android:layout_width="140dp"
-        android:layout_height="75dp"
+        android:layout_width="179dp"
+        android:layout_height="71dp"
         android:layout_marginStart="100dp"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="100dp"
         android:layout_marginRight="100dp"
+        android:background="@drawable/submit_button"
         android:gravity="center"
-        android:text="Submit"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
